--- a/.gitignore
+++ b/.gitignore
@@ -66,8 +66,9 @@ build/
 # You can safely ignore the xcuserdata files - but do NOT ignore the files next to them
 #
 
-xcuserdata
-#UserInterfaceState.xcuserstate
+UserInterfaceState.xcuserstate
+WorkspaceSettings.xcsettings
+xcdebugger
 
 ####
 # XCode 4 workspaces - more detailed
